refactor: 가독성이 더 좋도록 코드 리팩토링 (#283)